# aetherSense

./: CMakeLists.txt  README.md  REVIEW.md  sdkconfig.defaults  task1.md
main/: CMakeLists.txt  crc16.c  crc16.h  main.c  record_protocol.h  ring_buffer.c  ring_buffer.h  sensor_config.h  serial_writer.c  serial_writer.h  wifi_sensor.c  wifi_sensor.h
tools/: collector.py
